2000-04-26  Sven Wischnowsky  <wischnow@informatik.hu-berlin.de>

	* 10923: Completion/Core/_main_complete: better default value for
 	list-prompt style
	
	* 10922: Completion/Core/_path_files: file-sort made $fignore fail
	
2000-04-25  Sven Wischnowsky  <wischnow@informatik.hu-berlin.de>

	* 10917: Src/Zle/complist.c, Src/Zle/compresult.c: don't show
 	empty hidden matches even in menu-selection
	
	* 10916: Completion/Core/_main_complete, Src/Zle/complist.c:
 	re-calculate number of line with mark when needed; make default
 	prompts more consistent
	
	* 10915: Src/Zle/computil.c: forgotten fix for _arguments using
 	multiple actions
	
	* 10912: Src/Zle/compresult.c: don't always ignore backslashes in
 	paths when testing file type
	
	* 10910: Completion/Base/_tilde, Completion/Core/_all_labels,
 	Completion/Core/_requested: small fix for _requested to be able to
 	use _all_labels from within it
	
	* 10909: Completion/Core/_expand, Src/Zle/compcore.c,
 	Src/Zle/compresult.c: report prefix/suffix of parameter expansion
 	in IPREFIX/ISUFFIX; make _expand use them to be able to expand $foo
	
	* 10908: Completion/Base/.distfiles, Completion/Base/_argument_sets,
 	Completion/Base/_arguments, Completion/Base/_describe,
 	Completion/Builtins/_bindkey, Completion/Builtins/_compdef,
 	Completion/Builtins/_emulate, Completion/Builtins/_zpty,
 	Completion/Core/_tags, Doc/Zsh/compsys.yo,
 	Etc/completion-style-guide, Src/Zle/computil.c: make _arguments
 	use more than one action when appropriate; add _argument_sets to
 	complete different sets of arguments and options for the same command
	
2000-04-24  Bart Schaefer  <schaefer@zsh.org>

	* 10900: Src/Makefile.in: Replace a dependency on Makefile with a
	more accurate dependency on config.status.

2000-04-20  Sven Wischnowsky  <wischnow@informatik.hu-berlin.de>

	* 10881: Functions/Misc/zrecompile: don't remove *all* .zwc files,
 	keep the first one
	
	* 10868: Src/Zle/complist.c: fix off-by-one error in scrolled